# csv_wizard

./: .gitignore  LICENSE  README.md  csv_parser.py  main.py  newtest.csv  pyproject.toml  test_file_backup.csv  test_main.py
src/: __ColumnFilter.py  __RowFilter.py  csv_wizard.py
tests/: conftest.py  test_divide.py  test_encoding.py  test_file.csv  test_file_diff.csv  test_file_with_dups.csv  test_find_common_rows.py  test_find_different_rows.py  test_get_all_rows.py  test_get_dialect.py  test_get_duplicates.py  test_get_headers.py  test_misc.py  test_slice.py
