[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "chardet>=5.1.0",
    "pytest>=7.2.1",
]

[project]
name = "csv_parser"
version = "0.4.0"
description = "Handy extension to Python csv standard library package"
authors = [
    {name = "carloszbent", email = "bentsoft365@gmail.com"},
]
dependencies = [
    "chardet>=5.1.0",
    "build>=0.10.0",
    "twine>=4.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
