[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "chardet>=5.1.0",
    "pytest>=7.2.1",
    "black>=23.3.0",
    "isort>=5.12.0",
]

[project]
name = "csv_wizard"
version = "1.0.2"
description = "Handy extension to Python csv standard library package"
authors = [
    {name = "liquidsnake", email = "bentsoft365@gmail.com"},
]
dependencies = [
    "chardet>=5.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
